# SFML-Engine-2019

./: .gitignore  AnimatedSprite.hpp  BillboardSprite.cpp  BillboardSprite.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Circle.hpp  CircleCollisionShape.cpp  CircleCollisionShape.hpp  Collection.cpp  Collection.hpp  CollisionShape.cpp  CollisionShape.hpp  Component.cpp  Component.hpp  Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  GameWindow.cpp  GameWindow.hpp  Graphics.cpp  Graphics.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  Input.cpp  Input.hpp  InputComponent.cpp  InputComponent.hpp  Math.cpp  Math.hpp  Message.hpp  MyGame.cpp  MyGame.hpp  MyStack.cpp  MyStack.hpp  Node.cpp  Node.hpp  Node2D.cpp  (+17 more)
GameWindow/: GameWindow.cpp  GameWindow.hpp
