set(SFML_ENGINE_SOURCES
    Node.cpp
    Node.hpp
    Node2D.hpp
    Node2D.cpp
    Collection.hpp
    Collection.cpp
    RectCollisionShape.hpp
    RectCollisionShape.cpp
    CircleCollisionShape.hpp
    CircleCollisionShape.cpp
    CollisionShape.hpp
    CollisionShape.cpp
    "Message.hpp"
    Component.hpp
    Component.cpp
    PhysicsComponent.hpp
    PhysicsComponent.cpp
    GraphicsComponent.hpp
    GraphicsComponent.cpp
    Physics.hpp
    Physics.cpp
    Graphics.hpp
    Graphics.cpp
    Circle.hpp
    Input.hpp
    Input.cpp
    Game.cpp
    Game.hpp
    SpriteStack.hpp
    SpriteStack.cpp
    Tree.hpp
    AnimatedSprite.hpp
    InputComponent.hpp
    InputComponent.cpp
    Engine.hpp
)
add_library(SFML-Engine ${SFML_ENGINE_SOURCES})
target_include_directories (SFML-Engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
