set(CMAKE_CXX_STANDARD 17)

set(SFML_ENGINE_SOURCES
    Math.hpp
    Math.cpp
    Node.cpp
    Node.hpp
    Camera.hpp
    Object2D.hpp
    Object2D.cpp
    Collection.hpp
    Collection.cpp
    RectCollisionShape.hpp
    RectCollisionShape.cpp
    CircleCollisionShape.hpp
    CircleCollisionShape.cpp
    CollisionShape.hpp
    CollisionShape.cpp
    "Message.hpp"
    Component.hpp
    Component.cpp
    PhysicsComponent.hpp
    PhysicsComponent.cpp
    GraphicsComponent.hpp
    GraphicsComponent.cpp
    Physics.hpp
    Physics.cpp
    Graphics.hpp
    Graphics.cpp
    Circle.hpp
    Input.hpp
    Input.cpp
    Game.cpp
    Game.hpp
    SpriteStack.hpp
    SpriteStack.cpp
    Tree.hpp
    Tree.cpp
    AnimatedSprite.hpp
    InputComponent.hpp
    InputComponent.cpp
    Engine.hpp
    Engine.cpp
    TextureManager.hpp
    TextureManager.cpp
    BillboardSprite.hpp
    BillboardSprite.cpp
)
add_library(SFML-Engine ${SFML_ENGINE_SOURCES})
target_include_directories (SFML-Engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
